--- a/Classes/View/Conference Ratings/XBConferenceRatingCell.xib
+++ b/Classes/View/Conference Ratings/XBConferenceRatingCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -14,13 +14,6 @@
                 <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IQd-sq-UVE">
-                        <rect key="frame" x="237" y="15" width="30" height="14"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="201" translatesAutoresizingMaskIntoConstraints="NO" id="jVA-Ts-hyk">
                         <rect key="frame" x="20" y="8" width="201" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -28,18 +21,26 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="erg-FJ-vi6">
+                        <rect key="frame" x="229" y="11" width="58" height="22"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="58" id="3Oz-g8-Lf6"/>
+                            <constraint firstAttribute="height" constant="22" id="qqc-Tf-BrS"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="jVA-Ts-hyk" firstAttribute="leading" secondItem="FWd-fx-AhH" secondAttribute="leading" constant="20" id="0Vb-Wj-lV5"/>
-                    <constraint firstAttribute="trailing" secondItem="IQd-sq-UVE" secondAttribute="trailing" constant="20" id="9K4-Ap-omg"/>
-                    <constraint firstAttribute="centerY" secondItem="IQd-sq-UVE" secondAttribute="centerY" id="GJL-gW-g8f"/>
+                    <constraint firstAttribute="trailing" secondItem="erg-FJ-vi6" secondAttribute="trailing" id="Mwn-hG-SMZ"/>
+                    <constraint firstAttribute="centerY" secondItem="erg-FJ-vi6" secondAttribute="centerY" id="PCq-TU-8fe"/>
                     <constraint firstItem="jVA-Ts-hyk" firstAttribute="top" secondItem="FWd-fx-AhH" secondAttribute="top" constant="8" id="WHc-SN-RFz"/>
                     <constraint firstAttribute="trailing" secondItem="jVA-Ts-hyk" secondAttribute="trailing" constant="66" id="ako-IU-gq0"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="presentationTitleLabel" destination="jVA-Ts-hyk" id="5KH-NC-rHu"/>
-                <outlet property="ratingLabel" destination="IQd-sq-UVE" id="OcP-cL-Oqj"/>
+                <outlet property="ratingImageView" destination="erg-FJ-vi6" id="meW-th-6vg"/>
             </connections>
         </tableViewCell>
     </objects>
