--- a/Classes/View/Conferences/Speakers/XBConferenceSpeakerCell.xib
+++ b/Classes/View/Conferences/Speakers/XBConferenceSpeakerCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -15,15 +15,21 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IQd-sq-UVE">
-                        <rect key="frame" x="50" y="11" width="35" height="21"/>
+                        <rect key="frame" x="50" y="10" width="35" height="22"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="22" id="l8E-LW-kOc"/>
+                        </constraints>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jVA-Ts-hyk">
-                        <rect key="frame" x="90" y="10" width="37" height="21"/>
+                        <rect key="frame" x="90" y="10" width="37" height="22"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="22" id="8Q0-ag-Iwe"/>
+                        </constraints>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
@@ -39,13 +45,11 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="IQd-sq-UVE" secondAttribute="bottom" constant="11" id="22K-fP-avV"/>
-                    <constraint firstItem="IQd-sq-UVE" firstAttribute="top" secondItem="FWd-fx-AhH" secondAttribute="top" constant="11" id="3je-Jq-hah"/>
-                    <constraint firstAttribute="bottom" secondItem="jVA-Ts-hyk" secondAttribute="bottom" constant="12" id="7TB-ZA-lpI"/>
                     <constraint firstItem="IQd-sq-UVE" firstAttribute="leading" secondItem="FWd-fx-AhH" secondAttribute="leading" constant="50" id="9tg-Ai-Qni"/>
-                    <constraint firstItem="jVA-Ts-hyk" firstAttribute="top" secondItem="FWd-fx-AhH" secondAttribute="top" constant="10" id="B49-5a-nxZ"/>
                     <constraint firstItem="sOi-i9-FaW" firstAttribute="top" secondItem="FWd-fx-AhH" secondAttribute="top" constant="4" id="Hh2-8s-LAQ"/>
+                    <constraint firstItem="jVA-Ts-hyk" firstAttribute="top" secondItem="FWd-fx-AhH" secondAttribute="top" constant="10" id="Wl3-Tl-RIQ"/>
                     <constraint firstItem="jVA-Ts-hyk" firstAttribute="leading" secondItem="IQd-sq-UVE" secondAttribute="trailing" constant="5" id="XGj-wE-ehT"/>
+                    <constraint firstItem="IQd-sq-UVE" firstAttribute="top" secondItem="FWd-fx-AhH" secondAttribute="top" constant="10" id="bSe-Fd-TMs"/>
                     <constraint firstItem="sOi-i9-FaW" firstAttribute="leading" secondItem="FWd-fx-AhH" secondAttribute="leading" constant="6" id="iRz-9g-qlL"/>
                 </constraints>
             </tableViewCellContentView>
